[package]
name = "yacme"
version = "3.0.0"
edition = "2021"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
license = "MIT"
repository = "https://github.com/alexrudy/yacme"
description = "Yet another ACME client."
keywords = ["async", "acme", "https", "networking", "tls"]
categories = [
    "api-bindings",
    "cryptography",
    "network-programming",
    "web-programming::http-server",
]

[dependencies]
arc-swap = "1"
base64ct = { version = "1", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
const-oid = { version = "0.9", features = ["db"] }
der = { version = "0.7", features = ["std", "pem", "oid"] }
digest = { version = "0.10" }
ecdsa = { version = "0.16", features = ["std", "pkcs8", "pem"] }
elliptic-curve = { version = "0.13", features = [
    "pkcs8",
    "jwk",
    "arithmetic",
    "sec1",
    "alloc",
] }
hmac = "0.12"
http = "0.2"
lazy_static = { version = "1", optional = true }
mime = "0.3"
ouroboros = { version = "0.17" }
p256 = { version = "0.13", features = ["pkcs8", "arithmetic", "jwk"] }
pem-rfc7468 = { version = "0.7", features = ["std"] }
pkcs8 = { version = "0.10", features = ["alloc", "pem"] }
rsa = "0.9"
reqwest = { version = "0.11", features = [
    "rustls-tls",
    "json",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signature = "2"
spki = "0.7"
thiserror = "1"
tokio = { version = "1" }
tracing = { version = "0.1" }
url = { version = "2", features = ["serde"] }
x509-cert = { version = "0.2", features = ["pem", "std"] }
jaws = { version = "0.6" }

[dev-dependencies]
lazy_static = "1"
static_assertions = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber.version = "0.3"

[[example]]
name = "pebble"
path = "examples/letsencrypt-pebble.rs"
required-features = ["pebble"]

[[example]]
name = "pebble-schema"
path = "examples/low-level/pebble-schema.rs"
required-features = ["pebble"]

[[example]]
name = "show-request"
path = "examples/low-level/show-request.rs"
required-features = ["pebble"]

[[example]]
name = "generate-csr"
path = "examples/low-level/generate-csr.rs"

[features]
pebble = ["lazy_static"]
trace-requests = []

[[test]]
name = "pebble-integration"
path = "tests/pebble.rs"
required-features = ["pebble"]

[package.metadata.release]
allow-branch = ["main"]
publish = false
pre-release-hook = ["git", "switch", "-c", "release-{{version}}"]
push = true
tag = false
