[package]
name = "yacme"
version = "4.0.0"
edition = "2021"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
license = "MIT"
repository = "https://github.com/alexrudy/yacme"
description = "Yet another ACME client."
keywords = ["async", "acme", "https", "networking", "tls"]
categories = [
    "api-bindings",
    "cryptography",
    "network-programming",
    "web-programming::http-server",
]

[dependencies]
base64ct = { version = "1", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
const-oid = { version = "0.9", features = ["db"] }
der = { version = "0.7", features = ["std", "pem", "oid"] }
fd-lock = { version = "4", optional = true }
http = { version = "0.2", optional = true }
lazy_static = { version = "1", optional = true }
mime = "0.3"
pem-rfc7468 = { version = "0.7", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signature = "2"
thiserror = "1"
tokio = { version = "1" }
tracing = { version = "0.1" }
x509-cert = { version = "0.2", features = ["pem", "std"] }

[dependencies.jaws]
version = "1.0.0-alpha.1"
features = ["ecdsa", "p256", "rsa", "hmac"]

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls", "json"]
default-features = false

[dev-dependencies]
static_assertions = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber.version = "0.3"
pkcs8 = { version = "0.10", features = ["alloc", "pem"] }
http = { version = "0.2" }
p256 = { version = "0.13", features = ["pkcs8", "arithmetic", "jwk"] }
ecdsa = { version = "0.16", features = ["pem"] }
rsa = { version = "0.9", features = ["sha2"] }

[features]
pebble = ["lazy_static", "http", "fd-lock"]
trace-requests = []

[[example]]
name = "pebble"
path = "examples/letsencrypt-pebble.rs"
required-features = ["pebble"]

[[example]]
name = "pebble-schema"
path = "examples/low-level/pebble-schema.rs"
required-features = ["pebble"]

[[example]]
name = "show-request"
path = "examples/low-level/show-request.rs"
required-features = ["pebble"]

[[example]]
name = "generate-csr"
path = "examples/low-level/generate-csr.rs"


[[test]]
name = "pebble-integration"
path = "tests/pebble.rs"
required-features = ["pebble"]

[[test]]
name = "examples"
path = "tests/examples.rs"
required-features = ["pebble"]


[package.metadata.release]
allow-branch = ["main"]
publish = false
pre-release-hook = ["git", "switch", "-c", "release-{{version}}"]
push = true
tag = false
