[package]
name = "yacme-key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signature.workspace = true
elliptic-curve.workspace = true
ecdsa.workspace = true
p256.workspace = true
pkcs8.workspace = true
serde.workspace = true
