[package]
name = "yacme-key"
version = "1.1.0"
edition = "2021"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
license = "MIT"
repository = "https://github.com/alexrudy/yacme"
description = "ACME Key datastructures for YACME"
categories = ["asynchronous", "network-programming", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct.workspace = true
signature.workspace = true
elliptic-curve.workspace = true
ecdsa.workspace = true
p256.workspace = true
pkcs8.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
x509-cert.workspace = true
const-oid = { version = "0.9.1", features = ["db"] }
pem-rfc7468.workspace = true
der.workspace = true
