[package]
name = "yacme-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url.workspace = true
chrono.workspace = true
eyre.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
yacme-key.workspace = true
signature.workspace = true
hmac.workspace = true
sha2.workspace = true
yacme-protocol.workspace = true

[dev-dependencies]
pem-rfc7468.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
