[package]
name = "yacme-schema"
version = "1.0.1"
edition = "2021"

authors = ["Alex Rudy <opensource@alexrudy.net>"]
license = "MIT"
repository = "https://github.com/alexrudy/yacme"
description = "ACME request and response schemas"
categories = ["asynchronous", "network-programming", "cryptography"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct.workspace = true
chrono.workspace = true
eyre.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true
yacme-key.workspace = true
signature.workspace = true
hmac.workspace = true
sha2.workspace = true
yacme-protocol.workspace = true
x509-cert.workspace = true
der.workspace = true
ouroboros.workspace = true
pem-rfc7468.workspace = true

[features]
trace-requests = ["yacme-protocol/trace-requests"]

[dev-dependencies]
pem-rfc7468.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
