[package]
name = "yacme-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap.workspace = true
chrono.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
yacme-key.workspace = true
yacme-protocol.workspace = true
yacme-schema.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
serde_json.workspace = true

[features]
pebble = []
trace-requests = ["yacme-protocol/trace-requests"]

[[example]]
name = "pebble"
required-features = ["pebble"]
