[package]
name = "yacme-service"
version = "1.0.2"
edition = "2021"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
license = "MIT"
repository = "https://github.com/alexrudy/yacme"
description = "ACME high-level client library"
categories = ["asynchronous", "network-programming", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
yacme-key.workspace = true
yacme-protocol.workspace = true
yacme-schema.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
serde_json.workspace = true
yacme-test.workspace = true

[features]
pebble = []
trace-requests = ["yacme-protocol/trace-requests"]

[[example]]
name = "pebble"
path = "examples/letsencrypt-pebble.rs"
required-features = ["pebble"]

[[test]]
name = "pebble-integration"
path = "tests/pebble.rs"
required-features = ["pebble"]
