[package]
name = "yacme-test"
version = "1.0.0"
edition = "2021"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
license = "MIT"
repository = "https://github.com/alexrudy/yacme"
description = "ACME test helpers for YACME"
categories = ["asynchronous", "network-programming", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http.workspace = true
lazy_static = "1.4.0"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
