[package]
name = "yacme"
version = "1.0.1"
edition = "2021"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
license = "MIT"
repository = "https://github.com/alexrudy/yacme"
description = "Yet another ACME client."
categories = ["asynchronous", "network-programming", "cryptography"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yacme-service.workspace = true
yacme-schema.workspace = true
yacme-protocol.workspace = true
yacme-key.workspace = true
